--- a/PI/report/extended_abst.tex
+++ b/PI/report/extended_abst.tex
@@ -47,8 +47,11 @@
 
 \section{Introduction}
 
-Software optimization has been a fundamental process to science, in order to make viable certain softwares that require massive amounts of calculation. The use of several techniques has help decrease the execution time of different algorithm providing results and simulations in a viable time for its uses. Thanks to this techniques of optimization, research time is also pushed to a new maximum, decreasing the time between its possible dependencies.%% sources desenvolver esta parte
-This extended abstract presents the aplication domain, explaining its uses and objective. Knowing its domain and application's profile, a foundation is created to develop different optimizations: optimized sequencial version; OpenMP shared memory version. In the last sections of this extended abstract, the ongoing and future work and a brief conclusion will be presented.
+High-performance computing has been a fundamental process to science, in order to make viable certain softwares that require massive amounts of calculation. The use of several optimization techniques has help decrease the execution time of different algorithm, providing results and simulations in a viable time for its uses.
+
+This document will describe a study about improving performance of \emph{conv-diff}. This application calculate de heat of a material while spreading though an area. In this study we approach different ways to improve the solution.
+
+This extended abstract presents the aplication domain, explaining its uses and objective. Knowing its domain and application's profile, a foundation is created to develop different optimizations. From here an optimized sequencial version was developed, as well as an OpenMP shared-memory version. The ongoing and future work and a brief conclusion will be presented in the last sections of this extended abstract.
 
 \section{Case Domain}
 
