--- a/PI/report/extended_abst.tex
+++ b/PI/report/extended_abst.tex
@@ -56,7 +56,7 @@ This extended abstract presents the aplication domain, explaining its uses and o
 \section{Case Domain}
 
 %Desenvolver o objectivo cientifico
-The application analyzed for this study is \emph{conv-diff(Convexion-Diffusion)}.This application calculates the heat in the spread of a material, through the course of time. To achieve this end, the surface is represented as a mesh. Each cell of the mesh can be calculate with the velocity of the flux in each of its edges, its edge's normal, and its \emph{fi}.
+The application analyzed for this study is \emph{conv-diff(Convexion-Diffusion)}.This application calculates the heat in the spread of a material, through the course of time. To achieve this end, the surface is represented as a mesh. Each cell of the mesh can be calculate with the velocity of the flux in each of its edges, its edge's normal, and its $\phi$.
 The input and the output of the program is a XML file, that can both be converted to msh format for graphic visualization with gmsh.
 %%Part of this program functions, as well as the conversion commands between the formats, are from FVLib. Explicar FVLib
 
@@ -66,7 +66,7 @@ Being a finite volumn method each cell only is only dependant of its neighbours 
 \section{Profiling}
 
 %Profile geral, poucos numeros!
-The program consists in two major parts, a cycle that computes the \emph{fi} for each cell, using the functions \emph{makeResidual}, which calls the function \emph{makeFlux}, and an FVLib function, \emph{LUFactorize}, which validates the results of the above cycle. Both the calculated mesh and the real mesh, computed by the LUFactorize, are presented in the output files, together with the error between them.
+The program consists in two major parts, a cycle that computes the $\phi$ for each cell, using the functions \emph{makeResidual}, which calls the function \emph{makeFlux}, and an FVLib function, \emph{LUFactorize}, which validates the results of the above cycle. Both the calculated mesh and the real mesh, computed by the LUFactorize, are presented in the output files, together with the error between them.
  
 After analyzing the application, we conclude that the algorithm has a high workload in the \emph{LUFactorize} function,
 
@@ -81,7 +81,7 @@ After analyzing the application, we conclude that the algorithm has a high workl
 
 \section{On-going and Future Work}
 
-After implementing both the sequencial version and the OpenMP version, a vanilla implementation in CUDA was started. This version aims to take advantage of the graphics board performance using its vector units to diminish the compute time. For this a restructuring of the code is necessary removing most of the memory accesses while maintaining an abstraction of the system. After resolving this issue and other minor ones, we expect to achieve a boost in performance.
+After implementing both the sequencial version and the OpenMP version, a na\"{i}ve implementation in CUDA was started. This version aims to take advantage of the graphics board performance using its vector units to diminish the compute time. For this a restructuring of the code is necessary removing most of the memory accesses while maintaining an abstraction of the system. After resolving this issue and other minor ones, we expect to achieve a boost in performance.
 
 In future work, it is expected to develop a optimized CUDA version as well as a OpenMPI. A hybrid version using both CPU and GPU could also be a future implementation to have gains in performance. It is also expected to optimize several areas of code, questioning some decisions like using double-precision versus single-precision. 
 
