--- a/roofline_assign/report/report.tex
+++ b/roofline_assign/report/report.tex
@@ -27,7 +27,7 @@
 \begin{document}
 
 \begin{multicols}{2}
-\title{Roofline and Matrix Multiplication PAPI Analysis}
+\title{Study and Optimization of a Finite Volume Application}
 \author{
     Brito, Rui\\
     PG22781\\
