--- a/PI/report/extended_abst.tex
+++ b/PI/report/extended_abst.tex
@@ -47,16 +47,16 @@
 
 \section{Introduction}    %% Reler, corrigir algum erro
 
-High-performance computing has been a fundamental process to science, in order to make viable certain softwares that require massive amounts of calculation. The use of several optimization techniques has help decrease the execution time of different algorithm, providing results and simulations in a viable time for its uses.
+High-Performance Computing (HPC) has been a fundamental process to science, in order to make viable certain simulations that require massive amounts of calculation. The use of several optimization techniques has helped decrease the execution time of different algorithms, providing critical results faster, thus helping research move forward at a faster pace.
 
-This document will describe a study about improving performance of \emph{conv-diff}. This application calculate de heat of a material while spreading though an area. In this study we approach different ways to improve the solution. The project was devide in three stages. The first one was analysing the original application, building its profile while also developing a better sequencial version. 
-On the second stage, a shared-memory parallel version was made. Finnaly on the third stage, a CUDA version is being developed, taking advantage of the graphic board.
+This document will describe a study about improving the performance of \emph{conv-diff}. This application calculates de heat diffusion of, let's say, a liquid while it spreads though an area. In this study we approach different ways to improve uppon the initial solution solution. The project was devised in three stages. The first one was analysing the original application, building its profile while also developing a better sequencial version. 
+On the second stage, a shared-memory parallel version was made (\emph{OpenMP}). Finaly on the third stage, a CUDA version is being developed, taking advantage of the massive paralellism modern GPU's have to offer.
 
-This extended abstract presents the aplication domain, explaining its uses and objective. Knowing its domain and application's profile, a foundation is created to develop different optimizations. From here an optimized sequencial version was developed, as well as an OpenMP shared-memory version. The ongoing and future work and a brief conclusion will be presented in the last sections of this extended abstract.
+This extended abstract presents the aplication's domain, explaining its uses and objectives. By knowing its domain and profile, a string foundation is created to develop all kinds of different optimizations. From here, an optimized sequencial version was developed, as well as an OpenMP shared-memory version. The ongoing and future work and a brief conclusion will be presented in the last sections of this extended abstract.
 
-\section{Study Domain}    %% Reler, corrigir algum erro, adicionar algo se te lembrares
+\section{Case Study}    %% Reler, corrigir algum erro, adicionar algo se te lembrares
 
-The application analyzed for this study is \emph{conv-diff(Convexion-Diffusion)}.This application calculates the heat in the spread of a material, using a finite volumn method. To compute the heat diffusion, the surface is represented as a mesh. Being represented by cells and edges, the algorithm will cross all edges, calculating the contribution of the adjacents cells. This application rests in a Finite Volume Library (FVLib), which handles the structures and some of the logic functions of the problem.
+The application analyzed for this study is \emph{conv-diff(Convexion-Diffusion)}.This application simulates the way heat is tranfered in a fluid using the finite-volumes method.To compute the heat diffusion, the surface is represented as a mesh. Being represented by cells and edges, the algorithm will traverse all edges, calculating the contribution of the adjacent cells. This application rests in a Finite Volume Library (FVLib), which handles the structures and some of the logic functions necessary for the problem's solution.
 
 
 \section{Profiling}    %% Reler, reestruturar e adicionar o que faltar
