--- a/PI/report/extended_abst.tex
+++ b/PI/report/extended_abst.tex
@@ -102,6 +102,10 @@ In future work, it is expected to develop a optimized CUDA version as well as a 
 
 \section{Conclusion}
 
-%dizer apenas como correu desenvolvimento, e resultados positivos/negativos
+This extended abstract serves as a introduction to the study here presented. The initial results from the implementations of optimized versions, sequential and parallel, shows the capability of improvements in the computed time.
+
+Through the development of the solutions some problems were presented, such as the mesh being disperse and the structures implemented with  extensive use of pointers. This problems delayed the development of solutions, in particular the CUDA version. The decision of maintaining the abstraction of the system may prove to be a bold direction, but favorable in terms of comprehension.
+
+In the future released paper a deep analysis of the results will be made, showing the performance improvements obtained.
 
 \end{document}
