--- a/PI/report/slides/presentation.tex
+++ b/PI/report/slides/presentation.tex
@@ -1,12 +1,10 @@
-\documentclass{beamer}
+ \documentclass{beamer}
 
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english]{babel}
-
 \usepackage[retainorgcmds]{IEEEtrantools}%	IEEEeqnarray
-
 \usepackage{mathabx}%	convolution symbol
 \usepackage{multi row}
 \usepackage{epstopdf}
@@ -19,7 +17,7 @@
 }
 
 %	presentation info
-\title{Roofline and Matrix Multiplication PAPI Analysis}
+\title{Study and Optimization of a Finite Volume Application}
 
 \author{José Alves, Rui Brito}
 
@@ -43,132 +41,23 @@
 	\tableofcontents
 \end{frame}
 
-\begin{frame}
-	\frametitle{Sources for Machine Specifications}
+\section{Case Study}
 
-	Sources used for a complete profile:
+\begin{frame}[plain]
+	\frametitle{Convexion-Diffusion}
 	\begin{description}
-		\item[Linux System Information] (/proc/cpuinfo, /proc/meminfo) To gather specifications on hardware;\\
-		\item[Web] (ark.intel.com, crucial.com) For micro architecture and memory specifications;\\
-		\item[Linux Tools and Packages] (dmidecode, sysctl, bandwidth) To gather memory, cpu and bandwidth info;\\
+		\item [makeFlux] asd;
+		\item [makeResidual] dsa;
+		\item [LUFactorize] sad;
 	\end{description}
-
-\end{frame}
-\section{Specifications}
-\begin{frame}
-	\frametitle{Machines Specs}
-	{\small
-	\begin{table}[!htp]
-		\begin{tabular}{lrl}
-			\hline 
-			\textbf{Manufacter:} & Apple \\
-			\hline \\
-			\textbf{Model:} & MacBook Pro late 2008 \\
-			\hline 
-			\textbf{Processor} & & \\
-			Manufacturer: & Intel & \\
-			Arch: & Core & \\
-			Model: & Core 2 Duo T9600 & \\
-			Cores: & 2 & \\
-			Clock Frequency: & 2.80 GHz & \\
-			FP Performance's Peak: & 44.8 GFlops/s & \\
-			\hline
-			\end{tabular}
-		\caption{MacBook Pro late 2008 specifications}
-		\label{tab:mbp}
-\end{table}
-}
-\end{frame}
-\begin{frame}
-	\frametitle{Machines Specs}
-	{\small
-	\begin{table}[!htp]
-		\begin{tabular}{lrl}
-			\hline 
-			\textbf{Cache} & & \\
-			Level: & 1 & \\
-			Size: & 32KB + 32KB & \\
-			Line Size: & 64 B & \\
-			Associative: & 8-way & \\
-			Memory Access Bandwidth: & 40 GB/s & \\
-			\\
-			Level: & 2 & \\
-			Size: & 6 MB & \\
-			Line Size: & 64 B & \\
-			Associative: & 24-way & \\
-			\hline 
-			\textbf{RAM} \\
-			Type: & SDRAM DDR3 PC3-8500 & \\
-			Frequency: & 1067 MHz & \\
-			Size: & 4 GB & \\
-			Num. Channels: & 2 & \\
-			Latency: & 13.13 ns & \\
-		\end{tabular}
-		\caption{MacBook Pro late 2008 specifications}
-		\label{tab:mbp}
-\end{table}
-}
-\end{frame}
-\begin{frame}
-	\frametitle{Machines Specs}
-	{\small
-	\begin{table}[!htp]
-		\begin{tabular}{lrl}
-			\hline 
-			\textbf{Manufacter:} & HP \\
-			\hline 
-			\textbf{Model:} & Pavillion dv6-2190ep \\
-			\hline 
-			\textbf{Processor} & & \\
-			Manufacturer: & Intel & \\
-			Arch: & Nehalem & \\
-			Model: & i7-720QM & \\
-			Cores: & 4 & \\
-			Clock Frequency: & 1.60 GHz & \\
-			FP Performance's Peak: & 51.2 GFlops/s & \\
-			\hline 
-			\end{tabular}
-		\caption{HP Pavillion dv6-2190ep specifications}
-		\label{tab:mbp}
-\end{table}
-}
-\end{frame}
-			\begin{frame}
-	\frametitle{Machines Specs}
-	{\small
-	\begin{table}[!htp]
-		\begin{tabular}{lrl}
-		\hline
-			\textbf{Cache} & & \\
-			Level: & 1 & \\
-			Size: & 32KB + 32KB & \\
-			Line Size: & 64 B & \\
-			Associative: & 4/8-way & \\
-			Memory Access Bandwidth: & 22 GB/s & \\
-			\\
-			Level: & 2 & \\
-			Size: & 256 KB & \\
-			Line Size: & 64 B & \\
-			Associative: & 8-way & \\
-			\\
-			Level: & 3 & \\
-			Size: & 6 MB & \\
-			Line Size: & 64 B & \\
-			Associative: & 12-way & \\
-			\hline 
-			\textbf{RAM} \\
-			Type: & SDRAM DDR3 PC3-10600 & \\
-			Frequency: & 1333 MHz & \\
-			Size: & 4GB & \\
-			Num. Channels: & 2 & \\
-			Latency: & 13.5 ns & \\
-		\end{tabular}
-		\caption{HP Pavillion dv6-2190ep specifications}
-		\label{tab:mbp}
-\end{table}
-}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Test Environment}
+	CENAS
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 \section{Roofline}
