--- a/PI/report/slides/presentation.tex
+++ b/PI/report/slides/presentation.tex
@@ -46,6 +46,15 @@
 \begin{frame}[plain]
 	\frametitle{Convexion-Diffusion}
 	\begin{description}
+		\item [What?]Simulates the way heat is transfered in a fluid;
+		\item [How?] Uses finite-volumes method;
+		\item [Why?] Represents surface as a mesh, making each cell only dependent of its neighbours;
+	\end{description}
+\end{frame}
+
+\begin{frame}[plain]
+	\frametitle{Convexion-Diffusion}
+	\begin{description}
 		\item [makeFlux] asd;
 		\item [makeResidual] dsa;
 		\item [LUFactorize] sad;
